# coding-trajectory

./: .env.template  .gitignore  CLAUDE.md  README.md  project_pool.json  pyproject.toml  requirements.txt  tasks.toml
.claude/: settings.local.json
.claude/commands/: 批量质检.md  质检.md
ctpipe/: __init__.py  __main__.py  check.py  clean.py  cli.py  collect.py  config.py  distribution.py  export.py  finalize.py  gen.py  github_search.py  health.py  pool.py  prepare.py  project_hash.py  project_scan.py  rescore.py  retry.py  run.py  score.py  state.py  stats.py  toml_utils.py  trajectory.py  validate.py
docs/: analyze_prompt_template.md  collect-salvage-force.md  metadata_template.md  submission_template.csv  前置.md  评分文件规范.md  评分规范.md
docs/analysis/: 对面质检检查点详解.md
docs/examples/: 314ad3c2-ba1d-4153-8c1d-41cbc02e1223.jsonl  82aad824-748f-4cee-a314-89cc809c2a00.jsonl  quality_claude.toml  quality_qwen.toml
rubrics_templates/: README.md  README.zh-CN.md  calc_passrate.py
tests/: conftest.py  test_calc_passrate_cli.py  test_check.py  test_collect.py  test_export.py  test_fill_field.py  test_finalize.py  test_health.py  test_health_check.py  test_health_check_sh.py  test_pipeline_optimizations.py  test_rescore.py  test_retry.py  test_score_parsing.py  test_stats.py  test_stats_filter.py  test_trajectory.py  test_trajectory_parsing.py  test_validate.py
